--- a/MOOSE_web/templates/issue.html
+++ b/MOOSE_web/templates/issue.html
@@ -42,7 +42,7 @@
                             </div>
 
                             <div class="issue-tracker__item">
-                                <span class="issue-tracker__tag bg-cyan">{{ per_issue.oss.oss_fullname}}</span>
+                                <span class="issue-tracker__tag bg-cyan">{{ per_issue.oss_fullname}}</span>
                             </div>
                             <div class="issue-tracker__item">
                                 {%  if per_issue.issue_state == 0 %}
