--- a/MOOSE_web/templates/pull.html
+++ b/MOOSE_web/templates/pull.html
@@ -44,7 +44,7 @@
                             </div>
 
                             <div class="issue-tracker__item">
-                                <span class="issue-tracker__tag bg-cyan">{{ per_pull.oss.oss_fullname}}</span>
+                                <span class="issue-tracker__tag bg-cyan">{{ per_pull.oss_fullname}}</span>
                             </div>
                             <div class="issue-tracker__item">
                                 {%  if per_pull.pull_is_merged == 1 %}
