--- a/MOOSE_web/templates/new.html
+++ b/MOOSE_web/templates/new.html
@@ -1,37 +1,18 @@
 {% extends 'Base.html' %}
 {% load staticfiles %}
+{% block page_css %}
+    <link rel="stylesheet" href="{% static 'vendor/bower_components/material-design-iconic-font/dist/css/material-design-iconic-font.min.css' %}">
+    <link rel="stylesheet" href="{% static 'vendor/bower_components/select2/dist/css/select2.min.css' %}">
+    <link rel="stylesheet" href="{% static 'vendor/bower_components/flatpickr/dist/flatpickr.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/app.min.css' %}">
+{% endblock %}
 {% block page_js %}
-    <script src="{% static 'vendors/bower_components/select2/dist/js/select2.full.min.js' %}"></script>
+    <script src="{% static 'vendor/bower_components/select2/dist/js/select2.full.min.js' %}"></script>
+    <script src="{% static 'vendor/bower_components/dropzone/dist/min/dropzone.min.js' %}"></script>
+    <script src="{% static 'vendor/bower_components/flatpickr/dist/flatpickr.min.js' %}"></script>
     <script>
     $(document).ready(function() {
-        function getCookie(name) {
-            var cookieValue = null;
-            if (document.cookie && document.cookie !== '') {
-                var cookies = document.cookie.split(';');
-                for (var i = 0; i < cookies.length; i++) {
-                    var cookie = jQuery.trim(cookies[i]);
-                    // Does this cookie string begin with the name we want?
-                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                        break;
-                    }
-                }
-            }
-            return cookieValue;
-        }
-        var csrftoken = getCookie('csrftoken');
-
-        function csrfSafeMethod(method) {
-            // these HTTP methods do not require CSRF protection
-            return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-        }
-        $.ajaxSetup({
-            beforeSend: function(xhr, settings) {
-                if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                    xhr.setRequestHeader("X-CSRFToken", csrftoken);
-                }
-            }
-        });
+        
         $('#repo__add').click(function () {
             $.ajax({
                 url: '/addtolist/',
@@ -60,12 +41,7 @@
     })
     </script>
 {% endblock %}
-{% block page_css %}
-    <link rel="stylesheet" href="{% static 'vendors/bower_components/material-design-iconic-font/dist/css/material-design-iconic-font.min.css' %}">
-        <link rel="stylesheet" href="{% static 'vendors/bower_components/animate.css/animate.min.css' %}">
-    <link rel="stylesheet" href="{% static 'vendors/bower_components/select2/dist/css/select2.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/app.min.css' %}">
-{% endblock %}
+
 {% block content%}
 <div class="content__inner">
     <div class="row todo">
