--- a/MOOSE_web/static/css/my.css
+++ b/MOOSE_web/static/css/my.css
@@ -292,3 +292,11 @@
     font-size:.85rem;
     border-radius:2px
 }
+
+.score{margin:.35rem 0rem 0 0;-ms-flex-item-align:start;align-self:flex-start}
+.score>span{width:180px;height:180px;background-color:rgba(255,255,255,.05);border-radius:50%;display:inline-block;;text-align:center;;vertical-align:middle;margin-right:10rem;padding-top: 70px}
+
+.score>span>strong{display:block;font-size:3.0rem;font-weight:600;line-height:100%;}
+.score>.small_circle{width:120px;height:120px;background-color:rgba(255,255,255,.05);border-radius:50%;display:inline-block;;text-align:center;;margin-right:5rem;padding-top: 45px}
+.score>span>small{display:block;font-size:2.0rem;font-weight:600;line-height:100%;}
+.score>span>small_title{display:block;font-size:1.0rem;font-weight:600;line-height:100%;}
